# cppn-pytorch

./: README.md  activation_functions.py  autoencoder.py  config.py  cppn.py  evolutionary_algorithm.py  fitness_functions.py  graph_util.py  neat.py  pyproject.toml  setup.py  species.py  util.py
cppn_pytorch/: __init__.py  config.py  cppn.py  graph_util.py  util.py
cppn_torch/: .gitignore  __init__.py  activation_functions.py  config.py  cppn.py  demo.ipynb  fitness_functions.py  fourier_features.py  gene.py  graph_util.py  image_cppn.py  normalization.py  test.ipynb  util.py
cppn_torch/tests/: compression.py  image_cppn.py  population.py  sgd.py  test_compression.py  test_cppn.py  test_evolution.py  test_population.py  test_sgd.py
notebooks/: backprop.ipynb  latent.ipynb  sunrise.json  visualize_compute_graph.py
notebooks/glove/: glove.ipynb  loss_functions.py
